# crate-peek-mcp

./: CONTRIBUTE.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: cargo-clippy-crates.yml  cargo-clippy-template.yml  ci.yml
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs
crates/crate-peek-core/: Cargo.toml
crates/crate-peek-mcp-server/: Cargo.toml
crates/crate-peek-mcp-server/src/: main.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: lib.rs  main.rs
src/: counter.rs  main.rs
