[package]
name = "crate_peek_mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
rmcp = { version = "0.8.3", features = ["server", "transport-io"] }
schemars = "1.0.5"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std", 
    "signal",
] }
tokio-util = { version = "0.7.17", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
