[package]
name = "crate-peek-server"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rpg-alex/crate_peek_mcp"
description = "MCP server for crate-peek providing crate analysis and documentation services"
readme = "README.md"
authors = ["RPG Alex"]
keywords = ["mcp", "server", "rust", "llm", "docs"]
categories = ["development-tools", "network-programming"]

[dependencies]
crate-peek-core = { path = "../core" }
rmcp = { workspace = true, features = ["server", "transport-io"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

[lints]
workspace = true
